--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_location_log">LocationLog</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_show_map">ShowMap</string>
 </resources>
